--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <%= link_to "root", root_path %>
+    <%= link_to "error", pages_error_path %>
     <%= yield %>
   </body>
 </html>
